--- a/index.html
+++ b/index.html
@@ -146,6 +146,52 @@
 
 
             </div>
+
+
+            <div class="third-my-target">
+                <div class="my-targer-container">
+                    <div class="my-targer-text">
+                        <div><h1>My Current Target</h1></div>
+                        <div><p>The Web Developer career guide can help you take the first steps toward a lucrative career in web development. Find out how to become a Web Developer.</p></div>
+
+                        
+
+                    </div>
+
+
+
+                    <div class="target-skill-container">
+                        <div class="skill1">
+                            <img src="assets/html.png" alt="">
+                            <h4 class="skill-title"> HTML</h4>
+                            <p class="skill-description"> HTML stands for Hyper Text Markup Language. HTML is the standard markup language for creating Web pages.</p>
+                            <a class="learn" href="learn more">learn more</a>
+
+                        </div>
+                        <div class="skill2">
+                            <img src="assets/css.png" alt="">
+                            <h4 class="skill-title">CSS</h4>
+                            <p class="skill-description">css stands for Hyper Text Markup Language. HTML is the standard markup language for creating Web pages.</p>
+                            <a class="learn" href="learn more">learn more</a>
+                        </div>
+                        <div class="skill3">
+                            <img src="assets/js.png" alt="">
+                            <h4 class="skill-title">JS</h4>
+                            <p class="skill-description">JS stands for Hyper Text Markup Language. HTML is the standard markup language for creating Web pages.</p>
+                            <a class="learn" href="learn more">learn more</a>
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+
+
+            </div>
+
+
+            <!-- <div class="need-support"></div> -->
             
 
 
