--- a/index.html
+++ b/index.html
@@ -191,7 +191,33 @@
             </div>
 
 
-            <!-- <div class="need-support"></div> -->
+            <div class=" fourth-need-support">
+
+                <div class="need-support-container">
+                    <div class="need-support-text">
+                        <h1> I need Support</h1>
+                        <p> i need support.it will be great to me if you give me support</p>
+
+
+
+                    </div>
+
+                    <div>
+                        <input class="subin" type="text" id="p" name="p" placeholder="suggest me any feedback for me">
+                        <input class="sub" type="submit">
+                        
+                    </div>
+
+
+
+                </div>
+
+
+
+
+
+
+            </div>
             
 
 
