--- a/index.html
+++ b/index.html
@@ -244,7 +244,24 @@
 
     </main>
             
-  <footer></footer>
+  <footer>
+     <div class="last-container">
+        <div class="last-part-text"> <h4>An Open Commitment by Awlad Hossain</h4></div>
+        <div class="last-part-icon">
+            <div> 
+                <a href="https://edu.gcfglobal.org/en/facebook101/what-is-facebook/1/"><img src="assets/facebook.png" alt=""></a>
+                </div>
+            <div>
+                <a href="https://blog.hubspot.com/website/what-is-github-used-for"><img src="assets/github.png" alt=""></a>
+                </div>
+            <div> 
+                <a href="https://www.techtarget.com/whatis/definition/LinkedIn"> <img src="assets/linkedin-icon 1.png" alt=""></a>
+                </div>
+
+        </div>
+        
+    </div>
+  </footer>
 
 </body>
 </html>
